--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "5",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "redux": "^4.1.2",
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
